k8s/apps/base/librespeed/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-librespeed
  namespace: homelab
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: librespeed
  oidc:
    provider:
      issuer: "https://keycloak.oci.fossindia.ovh/realms/homelab"
      authorizationEndpoint: "https://keycloak.oci.fossindia.ovh/realms/homelab/protocol/openid-connect/auth"
      tokenEndpoint: "https://keycloak.oci.fossindia.ovh/realms/homelab/protocol/openid-connect/token"
    clientID: "librespeed"
    clientSecret:
      name: "librespeed-oidc-client-secret"
    redirectURL: "https://speed.oci.fossindia.ovh/oauth2/callback"
    logoutPath: "/logout"
